--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.6.0",
     "@mantine/form": "^7.6.0",
     "@mantine/hooks": "^7.6.0",
+    "@tabler/icons-react": "^2.47.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
