--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -3,12 +3,9 @@ version: '3.9'
 services:
   server:
     build: .
-    ports: 
-      - "8081:8080"
-  db:
-    image: 'postgres'
     ports:
-      - '4444:5432'
-    environment:
-      POSTGRES_USER: 'postgres'
-      POSTGRES_PASSWORD: 'root'
+      - "3000:3000"
+  db:
+    image: 'mongo'
+    ports:
+      - "27017:27017"
