--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
     "pg": "^8.11.3"
   }
 }
